# my_api_framework

./: .gitignore  README.md  conftest.py  main.py  pyproject.toml  pytest.ini
api/: api_service.py
common/: assert_util.py  db_util.py  logger.py  path_util.py  yaml_util.py
config/: settings.py
core/: request_handler.py
test_data/: demo_api_data.yaml  user_data.yaml
testcases/: test_api_mysql.py  test_demo.py  test_fastapi.py
