[project]
name = "my-api-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "allure-pytest>=2.15.3",
    "pymysql>=1.1.2",
    "pytest>=9.0.3",
    "pytest-order>=1.3.0",
    "pytest-rerunfailures>=16.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
]
